# FriEnds_backend

./: manage.py  pyproject.toml
chat/: consumers.py  models.py  routing.py  rq_jobs.py  urls.py  views.py  ws_message_handlers.py
chat/management/commands/: seed.py  seed_db.py  seed_rq.py
chat/migrations/: 0001_initial.py  0002_alter_room_occupants.py  0003_alter_room_occupants.py  0004_remove_room_occupants_room_occupants.py  0005_game_gameboard_player_gamepiece_game_board_game_room.py  0006_client.py  0007_client_connection_time.py  0008_alter_client_user.py  0009_client_connected_client_last_authed_message_time_and_more.py  0010_remove_gamepiece_board_remove_gamepiece_owner_and_more.py  0011_gameboard_game_board.py  0012_rename_width_gameboard_cols_and_more.py  0013_player_name_alter_player_user.py  0014_gamepiece.py  0015_player_order.py  0016_gamepiece_class_name_gamepiece_movement.py
friends_backend/: asgi.py  settings.py  urls.py  wsgi.py
tasks/: seed_db.sh  start_redis.sh  start_rq_scheduler.sh  start_rq_worker.sh
