[tool.poetry]
name = "friends-backend"
version = "0.1.0"
description = ""
authors = ["Riley Littlefield <rileylittlefield6122428@gmail.com>"]
readme = "README.md"
packages = [{include = "friends_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
channels = "^4.0.0"
daphne = "^4.0.0"
channels-redis = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
